upd: 优化缓存刷新逻辑，key 生成逻辑，不受参数顺序影响
